Arc: Fix scrollbar size (easier expand on hover)

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -174,8 +174,8 @@
 	background: transparent;
 	border-left: 1px solid transparent;
 	border-right: 1px solid transparent;
-	width: 5px;
-	padding: 0px;
+	width: 12px;
+	padding: 3px 0px 3px 6px;
 
 	.scrollbar-handle {
 		background: @sliderOverlay;
@@ -188,7 +188,6 @@
 	&.dragging {
 		background: @trackBg;
 		border-left: 1px solid @trackBorder;
-		width: 12px;
 		padding-left: 3px;
 		padding-right: 2px;
 
